correct tooltip is behind the heatmap

--- a/src/components/styles/ClimatHeatMap.sass
+++ b/src/components/styles/ClimatHeatMap.sass
@@ -54,6 +54,8 @@ svg
     background-color: rgba(64,224,208, 0.65)
     color: #0b0512
 
+.d3-tip
+    z-index: 2000
 .tooltipDot
     padding: 15px 10px
     border-radius: 5px
@@ -63,6 +65,7 @@ svg
     font-size: 12px
     max-width: 200px
     text-align: center
+    z-index: 1000
 .tooltipMoney
     font-size: 12px bold
     margin-bottom: 2px
